2011-03-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bootstrap: Add -g option.
	Switch default to autoreconf.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't build tools/schedsim by default.
	Add --enable-schedsim (Default: disabled).

2010-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	Add RTEMS Scheduler Simulator.
	* configure.ac: Add tools/schedsim.

2010-12-16	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* SUPPORT: Update address.

2010-09-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* README.configure: Further cleanup.

2010-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* README.configure: Remove the most obsolete parts.

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1532/testing
	* aclocal/project-root.m4: Add initial tests for untar capabilities.

2010-06-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: autoconf >= 2.65, automake >= 1.11.

2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.maint, README.configure: Remove more ITRON references.

2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/enable-itron.m4: Remove.
	* configure.ac: Remove itron.

2010-06-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.11.
	Bump _RTEMS_VERSION to 4.10.99.0.

2010-05-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-alias.m4: Change quoting to work-round
	http://www.freebsd.org/cgi/query-pr.cgi?pr=146378.

2009-10-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-custom-bsp.m4: Be less verbose.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-alias.m4: Fix quoting bug.

2009-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-custom-bsp.m4:
	Remove "${srcdir}/${RTEMS_TOPdir}/make/custom/$1".
	* aclocal/check-bsps.m4: Remove "blacklist".
