@@ -1,4 +1,4 @@
 AC_DEFUN([RTEMS_VERSIONING],
 m4_define([_RTEMS_VERSION],[4.10.99.0]))
 
-m4_define([RTEMS_API],[4.11])
+m4_define([_RTEMS_API],[4.11])
